# assemblyline-service-claravy

./: .cruft.json  Dockerfile  LICENSE-3RD-PARTY  Makefile  README.md  debug.env  pyproject.toml  service_manifest.yml
.devcontainer/: devcontainer.json
claravysvc/: al_reporter.py  claravy.py  claravy_client.py  claravysvc.py  corpus.py  report.py  update_server.py
data/: malpedia-actors.json  pup.txt
tests/: test_claravy.py  test_claravy_samples.py
tests/test_claravy/: greyware.json  malware.json
